[package]
name = "dr-messiah"
version = "0.1.0"
edition = "2021"

[dependencies]

# compression
lz4_flex = "0.11"
zstd = "0.13"
flate2 = "1.0"
lzma-rs = "0.3"

# models
porter-cast = { git = "https://github.com/dtzxporter/porter-lib.git" }
porter-math = { git = "https://github.com/dtzxporter/porter-lib.git" }

# reading
binrw = "0.14"
serde = "1.0"
serde_json = "1.0"
rmpv = "1.3"
rmp-serde = "1.3"

# general
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"