[package]
name = "updater"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

reqwest = { version = "0.12", features = ["json", "gzip"] }
tokio = { version = "1.41", features = ["full"] }
flate2.workspace = true
md5.workspace = true
futures = "0.3.31"
